--- a/index.html
+++ b/index.html
@@ -4,45 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PageWeb</title>
+    <title>GameReview</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
     <div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
-    </div>
+    
+  
+  </div>
+  
     <nav class="navbar">
-      <div class="container-fluid">
-        <a class="navbar-brand">
-          <img src="img/5.png" alt="Logo" width="90" height="72" class="d-inline-block align-text-mid">
+      <div  class="navbar-brand">
+          <a href="index.html"><img src="img/5.png" alt="Logo" width="90" height="72"></a>
           GameReview
         </a>
       </div>
     </nav>
+
+
+
+
+
     <div class="panels">
 
         <div class="panel hogwarts">
-          <a href="hogwart.html">
+          <a href="hogwart.html" target="_blank">
           <span class="titreJeu">Hogwarts Legacy, découvrez le jeu ici</span>
           </a>
         </div>
         
         <div class="panel elden">
-          <a href="elden.html">
+          <a href="elden.html" target="_blank">
             <span class="titreJeu">Elden Ring mmo, découvrez le jeu ici</span>
           </a>
         </div>
 
         <div class="panel lostark">
-          <a href="lostark.html">
+          <a href="lostark.html" target="_blank">
             <span class="titreJeu">Lost Ark mmo, découvrez le jeu ici !!!</span>
           </a>
         </div>
 
 
         <div class="panel gta">
-          <a href="gta.html">
+          <a href="gta.html" target="_blank">
             <span class="titreJeu">Grand theft auto, découvrez le jeu ici</span>
           </a>
         </div>
